infra/k8s/namespaces/dev/logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
  namespace: dev
  labels:
    app: logger
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
        env: dev
    spec:
      containers:
      - name: logger
        image: 912894834396.dkr.ecr.ap-northeast-2.amazonaws.com/moduly-logger:dev-latest
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
